# rl_resources

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  check_torch_cuda.py  mkdocs.yml  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json
.devcontainer/cpu-dev/: devcontainer.json
.devcontainer/gpu-dev/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy-docs.yml  deploy_docs.yml  release.yml
docs/: index.md  mkdocs.yml
docs/docs/: bibliography.md  index.md  introduction.md
docs/docs/bibliography/: deep_reinforcement_learning_in_action.md  grokking_deep_reinforcement_learning.md  template.md
notebooks/DeepReinforcementLearningInAction/: LICENSE
notebooks/DeepReinforcementLearningInAction/Chapter2/: Ch2_book.ipynb
notebooks/DeepReinforcementLearningInAction/Chapter3/: Ch3_book.ipynb  GridBoard.py  GridBoardRenderer.py  Gridworld.py
notebooks/GrokkingDeepReinforcementLearning/Chapter3/: chapter-03.ipynb
notebooks/GrokkingDeepReinforcementLearning/Chapter5/: chapter-05.ipynb
notebooks/GrokkingDeepReinforcementLearning/Chapter8/: chapter-08.ipynb
src/: __init__.py
src/envs/: __init__.py
src/envs/gym_aima/: __init__.py
src/gdrl/: __init__.py
src/gdrl/ch8/: __init__.py  discounted_cartpole.py  egreedy_strategy.py  env_utils.py  fcq.py  greedy_strategy.py  nfq.py  test_discounted_cartpole.py  test_egreedy_strategy.py  test_env_utils.py  test_greedy_strategy.py  test_nfq.py  vis_utils.py
src/gym_aima/: __init__.py
src/gym_aima/envs/: __init__.py  aima_env.py
src/gym_walk/: __init__.py
src/gym_walk/envs/: __init__.py  walk_env.py
src/utils/: __init__.py  preprocessing.py
tests/: __init__.py  test_gym_envs.py  test_preprocessing.py
utils/: __init__.py
