[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_resources"
version = "0.1.0"
description = "Deep Reinforcement Learning Resources and Utilities"
authors = [
    {name = "Paco"}
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "pytest>=7.0.0",
    "pylint>=2.15.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "python-semantic-release>=8.0.0",
    "build>=0.10.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.3.0",
]

[tool.semantic_release]
version_variable = [
    "utils/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.semantic_release.version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
repository = "https://github.com/yourusername/rl_resources"
token = "${{ secrets.GITHUB_TOKEN }}"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "ANN", # flake8-annotations
    "S",  # flake8-bandit
    "A",  # flake8-builtins
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "D",  # pydocstyle
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "ISC", # flake8-implicit-str-concat
    "G",  # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",  # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "TRY", # tryceratops
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D203", # no-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "ANN401", # Any type allowed
    "S101", # Use of assert detected
    "PT018", # Assertion should be broken down into multiple parts
    "INP001", # File is part of an implicit namespace package
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
