[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl-resources"
version = "0.1.0"
description = "Deep Reinforcement Learning Resources"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "markdown>=3.4.0",
    "pymdown-extensions>=10.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["notebooks", "downloaded_pdfs"]
