[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_resources"
version = "0.1.0"
description = "Deep Reinforcement Learning Resources and Utilities"
authors = [
    {name = "Paco"}
]

dependencies = [
    # PyTorch and Torchvision will use the "pytorch-source" defined in [tool.uv.sources]
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "gymnasium[other]>=0.29.0",
    "stable-baselines3>=2.0.0",
    "pytest>=7.0.0",
    "pylint>=2.15.0",
    "python-semantic-release>=8.0.0",
    "build>=0.10.0",
    "ipython>=8.35.0",
    "scipy>=1.15.2",
    "tqdm>=4.66.5",
    "pillow>=11.0.0",
    "pygame>=2.6.1",
    "pytest-cov>=6.1.1",
]

requires-python = ">=3.10"
readme = "README.md"
[project.license]
text = "MIT"

[project.optional-dependencies]
cpu = [
    # "some-cpu-specific-utility"
]
gpu = [
    # "some-gpu-specific-utility"
]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.3.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]

[tool.setuptools.packages.find]
include = ["src/*"]

[tool.semantic_release]
version_variable = [
    "__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.semantic_release.version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
repository = "https://github.com/yourusername/rl_resources" # Please update this
token = "${{ secrets.GITHUB_TOKEN }}"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "I", "B", "C4", "UP", "N", "ANN", "S", "A", "COM", "C90", "D",
    "T10", "EM", "EXE", "ISC", "G", "INP", "PIE", "T20", "PYI", "PT", "Q",
    "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD",
    "PGH", "PL", "TRY"
]
ignore = [
    "D100", "D104", "D211","D212", "ANN101", "ANN102", "ANN401", "S101",
    "PT018", "INP001", "ANN001", "ANN201", "ANN202", "ANN204", "D102",
    "ERA001", "D101", "COM812", "ISC001","E501","F405","N802","N806",
    "T201","G004","C901","PLR0913", "PLR0912","PLR0915","PLR0911",
    "TRY300","UP038","S603"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" }
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" }
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
